quasiment la fingit add pages/contact.html!

--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -35,7 +35,7 @@
        </nav>
       </header>
 
-<!-- barre déroulante -->
+<!-- div actualité -->
     <section id="actu">
          <h1>Nos actualités promotionnelles:</h1>
          <div class="actuContainer">
