--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../css/contact.css">
-  <title></title>
+  <title>Contacts | Giti</title>
 </head>
 <body>
   <header>
@@ -34,59 +34,67 @@
     </ul>
    </nav>
   </header>
-
-<!-- contact physique-->
-<section id="contact1">
-   <div class="adresse">
-     <h1>Notre Adresse</h1>
-   </div>
-   <div class="telephone">
-     <h1>Comment nous joindre</h1>
-   </div>
-</section>
-
-<!-- contact réseaux -->
-<section id="réseaux">
-  <div class="mail">
-   <h1>Notre adresse mail</h1>
+  <div class="description">
+    <h1>Contactez-nous!</h1>
+    <p>Nous restons à votre disposition et sommes à votre écoute pour répondre à vos questions sur les jeux et jouets,
+      <br/>votre commande ou l'utilisation de nos services. Pour ce faire, vous pouvez nous joindre par téléphone ou par e-mail.
+      <br/>Nous vous répondrons dans les meilleurs délais.
+    </p>
   </div>
-  <div class="facebook twitter">
-   <h1>Follow us!</h1>
-   </br>
-   <h2>Suivez les bons plans</h2>
+
+
+  <div class="contacts">
+    <div class="contactDiv">
+      <h1>Par Téléphone:</h1>
+      <p>Nos bureaux sont ouverts du :<br/>lundi au vendredi (9h00-12h30 et 13h30-17h00).
+        <br/><br/>Contactez-nous pour tout renseignement ou si vous souhaitez passer votre commande par téléphone au:
+        <br/><span class="important">06 00 00 00 01</span> (numéro non surtaxé).</p>
+    </div>
+    <div class="contactDiv">
+      <h1>Par email:</h1>
+      <p>Pour un meilleur traitement de votre demande, certains champs sont obligatoires. Ils sont repérés par le symbole*</p>
+      <button type="button" name="button" id="button">Accès formulaire</button>
+    </div>
+    <div class="contactDiv">
+      <h1>Par courrier:</h1>
+      <p>Vous pouvez nous écrire par voie postale à l'adresse suivante :<br/>
+      <span class="important">Gifti.Com / Jouet Online<br/>
+      Rue De la gigoulette<br/>
+      ZA des Déblanchisseurs - BP 666<br/>
+      59000 LILLE Cedex</span>
+      </p>
+    </div>
+    <div class="contactDiv">
+      <h1>Sur place:</h1>
+      <p>Vennez visiter notre boutique:<br/>
+      <span class="important">Centre Commercial du Bilboquet<br/>
+      69 rue de l'Envers<br/>
+      59800 LILLE<br/>
+      Tel : 03 00 00 00 01</span></p>
+    </div>
   </div>
-</section>
-<div class="client-bloc bloc-phone">
-			<div class="icon text-center">
-				<span class="icon-phone bg-orange blanc text-center"></span>
-			</div>
-			<h2 class="text-center">Par téléphone</h2>
-			<p>Nos bureaux sont ouverts du lundi au vendredi (9h00-12h30 et 13h30-17h00)<br>
-			Contactez-nous pour tout renseignement ou si vous souhaitez passer votre commande par téléphone </p>
-			<h3 class="hidden-xs telefoon">
-					<span class="">0 892 70 5002</span><br>
-					<small>(0,40€/min)</small>
-			</h3>
-			<p>Pour nous contacter à propos d'une de vos commandes utilisez le numéro non surtaxé indiqué dans votre mail de confirmation de commande.</p>
-  		</div>
 
-      <!-- footer-->
-          <footer>
-            <p id="copy"><a href="Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
-            <p id="icone">
-              <a href="https://fr-fr.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-              <a href="https://twitter.com/?lang=fr" target="_blank"><i class="fab fa-twitter-square"></i></a>
-              <a href="https://www.instagram.com/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
-              <a href="https://fr-fr.messenger.com/" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
-              <a href="https://maps.google.com/"></a>
-            </p>
+  <br/><br/>
+
+  <!-- footer-->
+  <footer>
+    <p id="copy"><a href="Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
+    <p id="icone">
+      <a href="https://fr-fr.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+      <a href="https://twitter.com/?lang=fr" target="_blank"><i class="fab fa-twitter-square"></i></a>
+      <a href="https://www.instagram.com/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://fr-fr.messenger.com/" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
+      <a href="https://maps.google.com/"></a>
+    </p>
 
 
-          </footer>
-          <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+  </footer>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
-          <!-- Bouton go to top -->
-          <script type="text/javascript" src="../js/goToTop.js"></script>
+  <!-- Bouton formulaire -->
+  <script type="text/javascript" src="../js/contact.js"></script>
+  <!-- Bouton go to top -->
+  <script type="text/javascript" src="../js/goToTop.js"></script>
 
 </body>
 </html>
