Edit des pages ventes final et des mention légale

--- a/pages/Garcons.html
+++ b/pages/Garcons.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Jouet de Garçon | Gifti</title>
-    <link rel="stylesheet" href="../css/moinde5ans.css" media="all">
+    <link rel="stylesheet" href="../css/garcon.css" media="all">
   </head>
 
   <body id="gris">
@@ -39,7 +39,11 @@
      </nav>
     </header>
 <br><br><br><br>
-    <section id="Filles">
+<section id="Description" >
+  <div class="imaged"> </div>
+</section>
+<br><br><br>
+    <section id="garçon">
 
       <div class="top">
 
@@ -95,9 +99,8 @@ Piles :  2 x LR03-AAA incluses. </p>
           <img src="../assets/jouet_garcon/warhammer.jpg" alt="Figurine Warhammer Space Marine heavy assault" />
           <button><span>41&euro;99</span></button>
           <p>Une figurine Warhammer à monter, à peindre et à jouer !<br>
-Seuls les surhumains Space Marines peuvent affronter les Aliens, les traîtres et les disciples des puissances du chaos qui visent à détruire l’humanité. Dans leurs rangs : les Space Marine Terminators avec des armures quasi invincibles, et les Storm Bolters, qui peuvent vaincre n’importe quel ennemi.<br> Les monstrueux Dreadnoughts portent leurs armes les plus puissantes, et peu sont ceux qui résistent à ce tonnerre de feu. Séparément, ils sont une puissante menace. Ensemble, ils sont presque invincibles!<br>
-Avec ce kit, les amateurs de Warhammer pourront non seulement satisfaire leurs envies créatives en construisant eux-même leurs figurines, mais aussi bien s'amuser en jouant avec. C'est le jouet créatif idéal.<br>
-Contenu de la boite :<br> 1 Space Marine Dreadnought,<br> 1 Space Marine Terminator Captain,<br> 4 Space Marine Terminators,<br> 1 Ammo Supply Dump,<br> 1 Pinceau,<br> 1 Colle,<br> 6 Peintures Citadel,<br> 1 Planche de Stickers,<br> 1 Tapis de combat coloré.</p>
+            Avec ce kit, les amateurs de Warhammer pourront non seulement satisfaire leurs envies créatives en construisant eux-même leurs figurines, mais aussi bien s'amuser en jouant avec. C'est le jouet créatif idéal.<br>
+            Contenu de la boite :<br> 1 Space Marine Dreadnought,<br> 1 Space Marine Terminator Captain,<br> 4 Space Marine Terminators,<br> 1 Ammo Supply Dump,<br> 1 Pinceau,<br> 1 Colle,<br> 6 Peintures Citadel,<br> 1 Planche de Stickers,<br> 1 Tapis de combat coloré.</p>
         </div>
 
         <div class="imgs">
