--- a/pages/fille.html
+++ b/pages/fille.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Jouet de fille | Gifti</title>
-    <link rel="stylesheet" href="../css/moinde5ans.css" media="all">
+    <link rel="stylesheet" href="../css/fille.css" media="all">
   </head>
 
   <body id="gris">
@@ -38,6 +38,10 @@
      </nav>
     </header>
 <br><br><br><br>
+<section id="Description" >
+  <div class="imaged"> </div>
+</section>
+<br><br><br>
     <section id="Filles">
 
       <div class="top">
@@ -69,18 +73,17 @@
   <img src="../assets/jouet_fille/set_veterinaire.jpg" alt="Set veterinaire Minnie" />
   <button><span>22&euro;00</span></button>
   <p>Pour soigner et emmener 'Figaro' en promenade, tu as tout dans ce set vétérinaire !<br>
-
-- Set vétérinaire 'Minnie' de 'Disney' comprenant :<br>
-- 1 vanity / cage de transport (30 x 24 x 25 cm environ) <br>
-- 1 peluche chat 'Figaro' (20 cm environ) <br>
-- 1 gamelle, 1 biberon <br>
-- 1 cornet, 1 stétoscope <br>
-- 1 seringue, 1 marteau-réflexe <br>
-- 1 paire de ciseaux, 2 pansements <br>
-- 1 otoscope, 1 thermomètre <br>
-- 1 brosse, 1 bracelet <br>
-- 1 pince à épiler, 1 support <br>
-- 1 planche de stickers pour décorer les éléments </p>
+    - Set vétérinaire 'Minnie' de 'Disney' comprenant :<br>
+    - 1 vanity / cage de transport (30 x 24 x 25 cm environ) <br>
+    - 1 peluche chat 'Figaro' (20 cm environ) <br>
+    - 1 gamelle, 1 biberon <br>
+    - 1 cornet, 1 stétoscope <br>
+    - 1 seringue, 1 marteau-réflexe <br>
+    - 1 paire de ciseaux, 2 pansements <br>
+    - 1 otoscope, 1 thermomètre <br>
+    - 1 brosse, 1 bracelet <br>
+    - 1 pince à épiler, 1 support <br>
+    - 1 planche de stickers pour décorer les éléments </p>
 </div>
 
 <div class="imgs">
@@ -186,15 +189,10 @@ Un costume de princesse (robe courte) livré avec des accessoires : chaussures, 
   <p>Quelle jeune fille ne rêve pas de ressembler à l'héroine Disney Luna.<br>
 Suivre ses aventures et s'en inspirer, patiner, apprendre, se perfectionner, c'est possible avec ces jolis patins à roulette.<br>
 Cet article est parfaitement adapté pour les filles, qu'elles sachent déjà patiner ou qu'elles démarrent leur apprentissage.<br>
-Les patins à roulette Soy Luna pointure 36/37 sont des articles pour fille sous licence Disney.<br>
 Ces rollers pour fille sont aux normes de sécurité CE et conviennent aux filles chaussant du 36/37.<br>
-Les chaussures montantes se ferment par laçage et sont montées sur de petits talons très fashion et girly.<br>
 Les couleurs et les motifs gais et toniques sont directement inspirés de l'univers de la série Soy Luna.<br>
 Les roulettes sont en matière plastique.<br>
 Un butoir de sécurité à l'avant de chaque patin permet un freinage et un arrêt en douceur.<br>
-Votre championne va développer sa motricité, son sens de l'équilibre et la coordination de ses mouvements tout en s'amusant.<br>
-De longues balades en famille en perspective, et quelle joie de la voir jour après jour progresser.<br>
-La pratique régulière du patinage à roulettes procure fun, bien être et un développement corporel harmonieux.<br>
 Comme Luna, en avant pour une farandole d'aventures et de défis !</p>
 </div>
 
@@ -227,7 +225,7 @@ Contient : <br>
   <img src="../assets/jouet_fille/Machine.jpg" alt="Maggie & Bianca - Machine à coudre" />
   <button><span>44&euro;99</span></button>
   <p>Une superbe machine créative et ludique dans le style de la série Maggie et Bianca !<br>
-    La machine à coudre Maggie et Bianca permet de créer ses vêtements et accessoires tout comme les stars de la série TV Maggie et Bianca Fashion Friends. <br> Une ampoule sur le coté permettra à votre enfant de faire un travail de précision ! Cette machine à coudre est le jouet parfait pour tous les enfants qui apprécient les loisirs créatifs et les activités manuelles.<br>
+    La machine à coudre Maggie et Bianca permet de créer ses vêtements et accessoires tout comme les stars de la série TV Maggie et Bianca Fashion Friends. <br> Une ampoule sur le coté permettra à votre enfant de faire un travail de précision !<br>
     Contenu de la boite :<br> 1 machine à coudre,<br> 4 bobines de fil,<br> 1 mètre ruban (dans le tiroir),<br> une silhouette aux mensurations de poupée mannequin ce qui permettra de réaliser des créations pour poupées,<br> des échantillons de tissus.<br>
     Piles : C-LR14 non incluses.<br>
     Dimensions du produit : 24 cm x 11 cm x 18.5 cm.<br>
