--- a/pages/jeux_societe.html
+++ b/pages/jeux_societe.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Jeux de société | Gifti</title>
-    <link rel="stylesheet" href="../css/moinde5ans.css" media="all">
+    <link rel="stylesheet" href="../css/jeuxsociete.css" media="all">
   </head>
 
   <body id="gris">
@@ -38,7 +38,11 @@
      </nav>
     </header>
 <br><br> <br><br>
-    <section id="Filles">
+<section id="Description" >
+  <div class="imaged"> </div>
+</section>
+<br><br><br>
+    <section id="jeu-de-société">
       <div class="top">
 
         <div class="imgs">
@@ -56,13 +60,8 @@
           <h5>Jeu <br>SmallWorld</h5>
           <img src="../assets/jeux_de_societe/smallworld.jpg" alt="SmallWorld"/>
           <button><span>54&euro;99</span></button>
-          <p>est un jeu pour 2 à 5 joueurs dans lequel chacun lutte pour établir sa civilisation dans un monde fantastique et fantasque.<br>
-            Cependant, ce monde est tout petit, et il n'y a pas assez de place pour tous ! <br>
-            Prenez la tête d'un des quatorze Peuples de Small World et étendez votre empire aux dépens de vos voisins en vous appuyant sur les Pouvoirs spéciaux de vos personnages ! <br>
-            En plaçant vos pions dans différentes régions et en conquérant les régions voisines, vous agrandirez votre territoire, et toute région contrôlée à la fin de votre tour vous rapportera des jetons de victoire. <br>
-            Lorsque votre civilisation sera trop exposée, il faudra avoir la sagesse de le reconnaître et d'accepter son déclin... mais ce sera pour mieux vous relever avec une nouvelle civilisation et remporter la victoire ! <br>
-            Small World est un jeu à l'univers fantastique où des nains, des mages, des amazones, des géants, des orcs et même des humains luttent sans merci pour leur empire en envoyant leurs troupes à la conquête de nouvelles régions. <br>
-            Les civilisations les plus faibles seront impitoyablement chassées du monde de Small World ! <br>
+          <p>Pour 2 à 5 joueurs dans lequel chacun lutte pour établir sa civilisation dans un monde fantastique et fantasque.<br>
+            Small World est un jeu à l'univers fantastique où des nains, des mages et même des humains luttent sans merci pour leur empire en envoyant leurs troupes à la conquête de nouvelles régions.<br>
             Contenu : <br>
             - 2 plateaux de jeu double-face (4 configurations de jeu possibles !)<br>
             - 14 Races fantastiques, leurs tuiles et leurs pions <br>
@@ -73,8 +72,6 @@
             - 6 aides de jeu <br>
             - 1 dé de renforts <br>
             - 1 livret de règles <br>
-            - 1 numéro d’accès en ligne Days of Wonder <br>
-
             Durée de la partie : 80 minutes. </p>
         </div>
 
@@ -102,8 +99,7 @@
           <h5>Money drop <br> premium</h5>
           <img src="../assets/jeux_de_societe/money.jpg" alt="Money drop premium"/>
           <button><span>44&euro;99</span></button>
-          <p>Vous recevez une certaine somme d'argent, et pouvez partir avec, à une seule condition : répondre juste à 8 questions.Lorsqu'on vous pose une question, il suffit alors de répondre dans le temps imparti en posant la totalité de la somme sur la bonne réponse, ou, en cas de doute, de répartir les paquets de billets comme bon vous semble sur plusieurs réponses. Mais n'oubliez pas qu'une seule réponse est la bonne, et que les trappes associées aux mauvaises réponses s'ouvrent à la fin <br> du temps, engloutissant ainsi les billets !<br>
-            Money Drop Premium est un jeu de société issu du jeu télévisé Money drop.<br>
+          <p> Money Drop Premium est un jeu de société issu du jeu télévisé Money drop.<br>
             Ce jeu, accessible aux plus de 8 ans, peut se jouer de 2 à 4 joueurs. La durée moyenne d'une partie est de 20 minutes. La boite de jeu contient 1 console de jeu électronique nécessitant 3 piles LR03 non fournies, 4 trappes automatiques, un lecteur optiques de cartes, 1 jeu de cartes questions, 1 jeu de cartes 8 ème questions, 4 jeu de liasses de billets de couleur, 1 bloc-notes et 1 notice avec les règles du jeu.</p>
         </div>
 
@@ -122,7 +118,6 @@
           <button><span>41&euro;99</span></button>
           <p>Mysterium est un jeu d’enquête coopératif dans lequel tout le monde perd ou tout le monde gagne. Les joueurs sont unis dans le but de découvrir les circonstances et le responsable du meurtre. Associations d’idées, discussions, intuition, déductions… Un grand moment de jeu, où le mystère perce par la simple force de vos esprits.<br>
             Médiums émérites, astrologues la tête pas trop dans les étoiles, voyants ne perdant pas la boule, vous êtes tous conviés à une séance de spiritisme extraordinaire afin d'élucider un ancien mystère. <br>
-            Le manoir hanté de Warwick, demeure de Mr MacDowell, vous ouvre ses portes. Osez franchir le seuil du manoir, prenez un siège et installez-vous autour de la table. Laissez-vous guider par votre 6 ème sens afin de percer les secrets de ces murs et délivrer l'âme d'un fantôme prisonnier des lieux depuis de nombreuses années. <br>
             La boîte contient 6 pions intuition, 6 étuis, 6 marqueurs niveau de clairvoyance, 36 jetons de clairvoyance, 1 plateau horloge, 4 plateaux de progression, 1 sablier, 54 cartes médiums, 54 cartes fantômes, 6 jetons coupable, 3 marqueurs corbeau, 1 paravent, 6 jetons fantôme et 84 cartes visio. <br>
             De 2 à 7 joueurs. <br>
             Durée d'une partie : environ 42 minutes.</p>
@@ -132,7 +127,7 @@
           <h5>Scrabble <br> Classique</h5>
           <img src="../assets/jeux_de_societe/scrabble.jpg" alt="Scrabble Classique"/>
           <button><span>39&euro;99</span></button>
-          <p>Le Scrabble Classique est certainement le jeu de lettres le plus connu au monde car il est très divertissant et en plus il permet de s'enrichir au niveau de la langue Française. Pour les enfants comme pour les adultes, le Scrabble Classique est une référence en matière de jeux de société et vous pourrez vous confronter en famille ou entre amis pour remporter un maximum de points en réalisant des mots intéressants. Bien sûr, il vous faudra utiliser des lettres qui rapportent gros comme le X, le Y, le W, le X ou encore le J et le Q et vous servir des cases mot compte double ou mot compte triple. Et surtout, vous devrez trouver le moyen de créer un Scrabble en vous servant de toutes les lettres que vous aurez piochées et que vous pourrez intégrer au plateau de jeu. Réaliser un maximum de mots et cumuler le plus gros score pour remporter la partie!
+          <p>Le Scrabble Classique est certainement le jeu de lettres le plus connu au monde. Pour les enfants comme pour les adultes, Bien sûr, il vous faudra utiliser des lettres qui rapportent gros comme le X, le Y, le W, le X ou encore le J et le Q et vous servir des cases mot compte double ou mot compte triple. Et surtout, vous devrez trouver le moyen de créer un Scrabble en vous servant de toutes les lettres que vous aurez piochées et que vous pourrez intégrer au plateau de jeu. Réaliser un maximum de mots et cumuler le plus gros score pour remporter la partie!
             Composition du jeu Scrabble Classique <br>
             - 1 plateau de jeu <br> - 4 présentoirs pour poser les lettres <br>- 1 sac avec 36 jetons représentant les lettres de l'alphabet<br> - 1 règle du jeu en Français <br>- 1 lexique des mots courts que l'on peut utiliser</p>
         </div>
@@ -141,11 +136,7 @@
           <h5>The <br> island</h5>
           <img src="../assets/jeux_de_societe/island.jpg" alt="The island"/>
           <button><span>39&euro;99</span></button>
-          <p>Début du XXe siècle. <br>
-            Une île mystérieuse au coeur de l’océan.<br>
-            La besace pleine de trésors, des explorateurs s’apprêtent à quitter les lieux,lorsque l’île commence peu à peu à couler. <br>
-            Pris de panique, les aventuriers tentent d’échapper à un destin funeste. Les plus chanceux feront le voyage en barque, alors que les infortunés devront partir à la nage.<br>
-            Mais personne ne sera à l’abri des monstres marins, requins et baleines qui peuplent les mers environnantes ! <br>
+          <p>Début du XXe siècle. Une île mystérieuse au coeur de l’océan.<br>
             Qui parviendra à regagner la terre ferme ? <br>
             Le jeu idéal pour réunir à une même table joueurs aguerris et occasionnels !<br>
             Un classique remis au goût du jour. <br>
