--- a/pages/jeux_videos.html
+++ b/pages/jeux_videos.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Jeux video | Gifti</title>
-    <link rel="stylesheet" href="../css/moinde5ans.css" media="all">
+    <link rel="stylesheet" href="../css/jeuxvideo.css" media="all">
   </head>
 
   <body id="gris">
@@ -38,7 +38,11 @@
      </nav>
     </header>
 <br><br><br><br>
-    <section id="Filles">
+<section id="Description" >
+  <div class="imaged"> </div>
+</section>
+<br><br><br>
+    <section id="jeux_vidéos">
       <div class="top">
 
         <div class="imgs">
