--- a/pages/moinde5ans.html
+++ b/pages/moinde5ans.html
@@ -39,9 +39,9 @@
     </header>
 
 <br><br><br>
-    <section id="Description" >
-      <p class="descriptif">Vous trouverez ici des jouets pour les enfants de 0 a 5 ans, pour les guider dans leur éveil et leur développement tout en s’amusant. Allant du doudou au tricycle ou du coloriage au jeu de construction votre enfant n’aura qu’une seule limite son imagination.</p>
-    </section>
+<section id="Description" >
+  <div class="imaged"> </div>
+</section>
     <br><br><br>
     <section id="top-vente-et-promo" >
 
