--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -35,7 +35,7 @@
        </nav>
       </header>
 
-<!-- div actualité -->
+<!-- barre déroulante -->
     <section id="actu">
          <h1>Nos actualités promotionnelles:</h1>
          <div class="actuContainer">
