--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -168,7 +168,7 @@
 
     <!-- footer-->
         <footer>
-          <p id="copy"><a href="Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
+          <p id="copy"><a href="../pages/Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
           <p id="icone">
             <a href="https://fr-fr.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
             <a href="https://twitter.com/?lang=fr" target="_blank"><i class="fab fa-twitter-square"></i></a>
