--- a/pages/Mention-legale.html
+++ b/pages/Mention-legale.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Mention Légale</title>
-    <link rel="stylesheet" href="css/copyright.css">
+    <title>Mention Légale | Gifti</title>
+    <link rel="stylesheet" href="../css/copyright.css">
   </head>
   <body>
 <div class="mention">
