--- a/pages/moinde5ans.html
+++ b/pages/moinde5ans.html
@@ -159,7 +159,7 @@
 
     <!-- footer-->
         <footer>
-          <p id="copy"><a href="Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
+          <p id="copy"><a href="../pages/Mention-legale.html">Copyright</a> &copy; 2017 <span>RoKeTe</span></p>
           <p id="icone">
             <a href="https://fr-fr.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
             <a href="https://twitter.com/?lang=fr" target="_blank"><i class="fab fa-twitter-square"></i></a>
@@ -172,10 +172,10 @@
         </footer>
         <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
+        <!-- Pour la div de présentation des produits -->
+        <script type="text/javascript" src="../js/presentation_produit.js"></script>
         <!-- Bouton go to top -->
         <script type="text/javascript" src="../js/goToTop.js"></script>
-        <!--presentation des divs -->
-          <script type="text/javascript" src="../js/presentation_produit.js"></script>
 
   </body>
 </html>
